src/assets/styles/cmps/SideNav.scss
.side-navigation{
    display: grid;
    grid-template-rows: auto auto 1fr;
    background-color: $clr10;
    border-start-end-radius: 10px;
    height: 100%;
    position: relative;

    .hide-nav{
        position: absolute;
        top: -0.2em;
        right: 0;
        margin: 0;
        width: 35px;
        height: 40px;
        display: none;
        justify-content: center;

        .hide-nav-btn{
            all: unset;
        }
    }

    .sidenav-header {
        border-block-end: 1px solid $clr11;
        padding: 0.8em;
        display: grid;
        grid-template-columns: 1fr 2em;
        align-items: center;

        .sidenav-home {
            display: grid;
            grid-template-columns: 2em 1fr;
            align-items: center;
            padding: 0.4em 0.6em;
            font-size: 12pt;
            color: $clr2;
            border-radius: $border-radius;

            &:hover {
                background-color: $clr17;
           }

           a:active{
                color: inherit;
           }
        }
    }
    .sidenav-main {
        display: grid;
        grid-template-rows: auto 1fr;

        .main-header {
            padding: 0.5em;

            .main-title {
                display: grid;
                grid-template-columns: 2rem 1fr;
                align-items: center;
                padding: 0.4em 0.5em;
                border-radius: $border-radius;

                .workspace-name {
                    background-color: $clr13;
                    border-radius: $border-radius;
                    color: $clr10;
                    font-weight: 500;
                    text-align: center;
                    width: 75%;
                    font-size: 12pt;
                }

                h2 {
                    font-weight: 600;
                    font-size: 13pt;
                    margin: 0.3em 0;
                }
            }


            .sidenav-search {
                display: flex;
                justify-content: space-between;
                align-items: center;
                color: $clr2;
                padding-block: 0.8em;
                padding-inline: 0.2em;
    
                .search-input {
                    display: flex;
                    justify-content: space-between;
                    align-items: center;
                    border: 1px solid $clr11;
                    border-radius: $border-radius;
                    width: 80%;
                    height: 35px;
    
                    .search-icon {
                        display: flex;
                        justify-content: center;
                        align-items: center;
                        color: $clr6;
                        padding: 0.3em;
    
                        svg {
                            padding: 0;
                        }
                    }
    
                    .sidenav-filter-btn {
                        padding: 0.3em;
                        display: flex;
                        align-items: center;
                        justify-content: center;
                        border-radius: $border-radius;
                        background-color: transparent;
                        color: transparent;
    
                        &:hover {
                            background-color: $clr17;
                        }
                    }
    
                    //filter btn show on hover
                    &:hover {
                        .sidenav-filter-btn{
                            color: $clr6;
                        }
                    }
    
                    input {
                        font-family: $font-txt;
                        border: none;
                        width: 70%;
                        font-size: 11pt;
                        color: $clr2;
    
                        &::placeholder {
                            font-family: $font-txt;
                            font-size: 11pt;
                       }
        
                        &:focus {
                            outline: none; 
                        }
                    }
                }
    
                
                .add-board-btn {
                    color: $clr10;
                    margin: 0;
                    border-radius: $border-radius;
                    width: 35px;
                    height: 35px;
                    display: flex;
                    justify-content: center;
                    align-items: center;
                    padding: 0;
    
                    &:hover {
                        background-color: $clr9;
                    }
                }
            }

        }

        .boards-list{
            all: unset;
            display: grid;
            grid-template-rows: repeat(auto-fill, minmax(30px, 1fr));
            align-items: center;
            gap: 3px;
            margin-left: 0.8em;
        }
    }

    &:hover .hide-nav{
        display: flex;
        background-color: $clr17;
        border-radius: $border-radius;
    }
}

